--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
-pandas>=1.3.0
-numpy>=1.21.0
-scikit-learn>=1.0.0
-matplotlib>=3.4.0
+pyspark==3.5.1
+python-dotenv>=1.0.0
+pandas>=2.0.0
+numpy>=1.24.0
+matplotlib>=3.7.0
+scikit-learn>=1.3.0
 seaborn>=0.11.0
 mord>=0.6
 scipy>=1.7.0
 tqdm>=4.60.0
 kaggle>=1.5.0
 jupyter>=1.0.0
+transformers>=4.41.0
+torch>=2.1.0
+accelerate>=0.30.0
